# LwirSimulator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: compiler_contract.md  lwir_asm_format.md  processor_layout_plan.md  processor_layout_task_breakdown.md  vliw_asm_format.md
docs/adr/: 0004-stage-4d-msi-coherence.md
examples/: clean_schedule.lwir  clean_schedule.vliw  hello.lwir  hello.vliw  illegal_raw_same_bundle.lwir  illegal_raw_same_bundle.vliw  illegal_wrong_slot.lwir  illegal_wrong_slot.vliw  mul_latency.lwir  mul_latency.vliw  predication.lwir  predication.vliw
examples/fixtures/: README.md
examples/fixtures/illegal/: w16_predicate_and_slot.lwir  w16_predicate_and_slot.vliw  w4_latency_mul_use.lwir  w4_latency_mul_use.vliw  w4_layout_width_mismatch.vliw  w4_missing_fp_unit.vliw  w4_no_processor_header.vliw  w4_unknown_unit.lwir  w4_unknown_unit.vliw  w8_call_ret_same_bundle.lwir  w8_call_ret_same_bundle.vliw
examples/fixtures/legal/: w16_call_mem_latency.lwir  w16_call_mem_latency.vliw  w1_single_slot.vliw  w2_dual_slot.vliw  w3_triple_slot.vliw  w4_acqload_relstore.vliw  w4_aes_unit.vliw  w4_cache_dirty_eviction.vliw  w4_cache_hit_streak.vliw  w4_composed_slot.lwir  w4_control_pred_mem_latency.lwir  w4_control_pred_mem_latency.vliw  w4_fp_unit.vliw  w4_msi_coherence_cpu0.vliw  w4_msi_coherence_cpu1.vliw  w8_pred_mem_latency.lwir  w8_pred_mem_latency.vliw
scripts/: check_examples.sh
src/: asm.rs  bundle.rs  cache.rs  cpu.rs  isa.rs  latency.rs  layout.rs  lib.rs  main.rs  program.rs  system.rs  verifier.rs
src/cpu/: execute.rs  legality.rs  memory.rs  printer.rs  spec.rs  state.rs  trace.rs  types.rs
src/hw/: mod.rs
tests/: smoke.rs  verifier.rs
