[package]
name = "lwir_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
builtin = { path = "../verus/source/builtin", package = "verus_builtin" }
builtin_macros = { path = "../verus/source/builtin_macros", package = "verus_builtin_macros" }
vstd = { path = "../verus/source/vstd" }

[package.metadata.verus]
verify = true

# Run with: cargo run
# Verify with: cargo verus verify (requires cargo-verus in PATH)
