[package]
name = "lwir_simulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lwir_simulator"
path = "src/main.rs"

[[bin]]
name = "lwir_verify"
path = "src/bin/lwir_verify.rs"

[dependencies]
builtin = { path = "../verus/source/builtin", package = "verus_builtin" }
builtin_macros = { path = "../verus/source/builtin_macros", package = "verus_builtin_macros" }
vstd = { path = "../verus/source/vstd" }

[package.metadata.verus]
verify = true

# Run simulator with: cargo run --bin lwir_simulator -- <program.lwir>
# Run verifier with:  cargo run --bin lwir_verify -- <program.lwir>
# Verify with: cargo verus verify (requires cargo-verus in PATH)
