[package]
name = "vliw_simulator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vliw_simulator"
path = "src/main.rs"

[[bin]]
name = "vliw_verify"
path = "src/bin/vliw_verify.rs"

[dependencies]
builtin = { path = "../verus/source/builtin", package = "verus_builtin" }
builtin_macros = { path = "../verus/source/builtin_macros", package = "verus_builtin_macros" }
vstd = { path = "../verus/source/vstd" }

[package.metadata.verus]
verify = true

# Run simulator with: cargo run --bin vliw_simulator -- <program.vliw>
# Run verifier with:  cargo run --bin vliw_verify -- <program.vliw>
# Verify with: cargo verus verify (requires cargo-verus in PATH)
